--- a/index.html
+++ b/index.html
@@ -1,149 +1,209 @@
----
-layout: defaultnew
----
-		<!-- Header -->
-		<header id="header" class="alt">
-			<span class="logo"><img src="images/logo.png" alt="" /></span>
-			<h1>Inspire Terapia Integrativa</h1>
-			<p>Cuide da sua saúde emocional e espiritual.<br />
-			Siga em nosso instagram <a href="https://www.instagram.com/terapia_inspire/">@terapia_inspire</a>.</p>
-		</header>
+<!DOCTYPE HTML>
+<!--
+	Hyperspace by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Hyperspace by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-	<!-- Nav -->
-		<nav id="nav">
-			<ul>
-				<li><a href="#Inspire" class="active">Inspire</a></li>
-				<li><a href="#Diego" >Quem sou eu</a></li>
-				<li><a href="#Terapia">Terapia </a></li>
-				<li><a href="#Agendar">Agendar</a></li>
-				<li><a href="#Logoterapia">Logoterapia</a></li>
-				<li><a href="#Planos">Planos</a></li>
-			</ul>
-		</nav>
-
-		<!-- Main -->
-		<div id="main">
-
-	<!-- First Section -->
-	<section id="Inspire" class="main special">
-		<header class="major">
-			<h2>Inspire</h2>					
-		</header>
-		<p class="content">					
-			Sabe aquela sensação de estar perdido? Ou aquela busca interna por respostas e entendimentos de várias questões complexas da sua vida? Eu tenho a chave para suas inquietações. Quem passa pelo processo da Terapia Inspire, realiza mudanças e transformações significativas em sua vida alcançando maior clareza da sua história pessoal e ganha saúde e bem-estar. </br>
-			Você já se sentiu frustrado por não conseguir alcançar seus objetivos? Em muitos casos, o estresse ocorre em virtude da falta de organização. Trabalhar com níveis reduzidos de estresse é fundamental para desenvolver e alcançar seus objetivos, para que você consiga encarar as suas tarefas e desafios com mais clareza e tranquilidade.					
-		</p>
-		<ul class="actions">
-			<li><a href="inspire" class="button">BENEFÍCIOS</a></li>
-		</ul>
-	</section>
-
-<!-- Introduction -->
-<section id="Diego" class="main">
-	<div class="spotlight">
-		<div class="content">
-			<header class="major">
-				<h2>Ola sou o Diego!</h2>
-			</header>
-			<p>Formado em Jornalismo, Filosofia, Teologia, Coaching e estudante de Psicologia, trabalho, principalmente, com você que busca reduzir o seu nível de estresse, organizar a sua rotina, gerenciar o seu tempo para aumentar a sua produtividade, desempenho e qualidade de vida, focar no que realmente importa e eliminar as distrações, superar o medo e a ansiedade diante de uma tomada de decisão importante e desenvolver uma espiritualidade que alcance a harmonia e a paz interior. </p>
-			<p>
-				Há 15 anos compreendendo, analisando e treinando pessoas, quero compartilhar com você a minha experiência pessoal e profissional de aprimoramento na busca do autoconhecimento e do reconhecimento do meu propósito de vida que me faz ser resiliente e solidário diante dos obstáculos e a superar os desafios com paciência, sabedoria, coragem e determinação.
-			</p>						
-		</div>
-		<span class="image"><img src="images/diego.jpg" alt="" /></span>
-	</div>
-</section>
-
-<!-- First Section -->
-<section id="Terapia" class="main special">
-<header class="major">
-	<h2>O que e a Terapia Integrativa?</h2>
-	<p>
-		A Terapia Integrativa é uma abordagem de análise existencia, inspirada na Logoterapia fundada por Viktor Frankl, que comprrende o ser humano na sua dimensão física, psíquica, emocional e espiritual, e tem como principios norteadores a buscca pelo sentido da vida apenas do sofrimento humano.
-	</p>
-</header>
-<p class="content">
-	O Plano de Terapia tem como objetivo favorecer o desenvolvimento pessoal e espiritual em alta performance, identificando os pensamentos e atitudes da sua história de vida que te impedem de superar os conflitos para alcançar outro nível em sua vida, tornando-se mais produtiva, realizada e feliz.
-</p>
-</section>
-
-<!-- Get Started -->
-<section id="Agendar" class="main special">
-<header class="major">
-	<h2>Agende agora sua consulta</h2>
-	<h4>CUIDE DA SUA SAÚDE EMOCIONAL E ESPIRITUAL, E INSPIRE!</h4>
-	<p>
-		Conflitos nos Relacionamentos, Ansiedade, Depressão e Procrastinação Sessões
-		on-line ou presencial 👇🏻
-	</p>
-</header>
-<footer class="major">
-	<ul class="actions special">
-		<li><a href="https://www.instagram.com/terapia_inspire/" class="button primary"> Via Instagram <span class="icon brands fa-instagram"></span> </a></li>
-		<li><a href="https://api.whatsapp.com/send/?phone=5519971564256&text&app_absent=0" class="button whatsapp">Via WhatsApp <span class="icon brands fa-whatsapp"></span></a></li>
-	</ul>
-</footer>
-<dt>Endereço</dt>
-<dd>Rua 7 de setembro, 666 - Centro &bull; Araras, SP</dd>
-</section>
-
-			<section id="Logoterapia" class="main special">
-				<header class="major">
-					<h2>Logoterapia</h2>
-				</header>
-				<p>
-					<span class="image left"><img src="images/pessoas.jpg" alt="Pessoas" /></span>
-					O Plano de Terapia tem como objetivo favorecer o desenvolvimento pessoal e espiritual em alta performance, identificando os pensamentos e atitudes da sua história de vida que te impedem de superar os conflitos para alcançar outro nível em sua vida, tornando-se mais produtiva, realizada e feliz.
-					A Terapia com o método da Logoterapia de Viktor Frankl é um dos instrumentos mais eficazes de desenvolvimento humano. Ao entrar nesse universo, você será capaz de sentir o poder da transformação diariamente, tanto no âmbito pessoal como no espiritual. As sessões funcionam por meio de perguntas que levam você à reflexão, potencializando seus pontos fortes, trabalhando seus pontos de melhoria e visando a eliminação de pensamentos limitantes, o que tem um impacto real em todos aspectos da sua vida. 
-
-					</br></br>
-					<h3>No DESENVOLVIMENTO PESSOAL vamos:</h3>
-					<li> Elaborar um Projeto de vida</h1>
-					<li> Superar crenças limitantes</h1>
-					<li> Desenvolver a gestão emocional</h1>
-					<li> Buscar por respostas para questões complexas</h1>
-					<li> Trabalhar a confiança em si mesmo</h1>
-					<li> Alcançar com maior agilidade e assertividade os seus objetivos</h1>
-					<li> Construir uma visão de futuro clara e real</h1>
-					
-					</br></br>
-					<h3>No DESENVOLVIMENTO PROFISSIONAL vamos:</h3>
-					<li>Elaborar um Plano de carreira </h1>
-					<li> Aumentar a produtividade </h1>
-					<li> Atingir Metas</h1>
-					<li>Solucionar conflitos </h1>
-					<li> Reduzir o nível de estresse </h1>
-					<li>Desenvolver novas habilidades</h1>
-					<li>Trabalhar o conhecimento contínuo</h1>
-
-					</br></br>
-					<h3>No DESENVOLVIMENTO ESPIRITUAL vamos:</h3>
-					<li> Buscar o equilíbrio espiritual </h1>
-					<li> Desenvolver o alinhamento de propósitos</h1>
-					<li>Melhorar os relacionamentos humanos </h1>
-					<li>Aprender a Perdoar a si mesmo</h1>
-					<li> Maior consciência da força Interior </h1>
-					<li>Fortalecer as emoções positivas </h1>
-					<li>Aprender a desligar-se do passado e Viver o Aqui e Agora</h1>
-
-				</p>
-
+		<!-- Sidebar -->
+			<section id="sidebar">
+				<div class="inner">
+					<nav>
+						<ul>
+							<li><a href="#intro">Celebrante</a></li>
+							<li><a href="#one">Who we are</a></li>
+							<li><a href="#two">What we do</a></li>
+							<li><a href="#three">Get in touch</a></li>
+						</ul>
+					</nav>
+				</div>
 			</section>
 
-<section id="Planos" class="main special">
-	<header class="major">
-		<h2>Planos</h2>					
-	</header>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-	<h4>&bull; ACOLHIMENTO &bull; </h4>
-	<p>
-		As sessões de acolhimento terapêutico têm o objetivo de trazer alívio das angústias e tensões. Com duração de 30 minutos, pode ser realizada mais de uma vez caso a pessoa sinta necessidade. Porém, é importante conversar com o terapeuta para definir a melhor direção.  
-	</p>
+				<!-- Intro -->
+					<section id="intro" class="wrapper style1 fullscreen fade-up">
+						<div class="inner">
+							<h1>Hyperspace</h1>
+							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
+							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<ul class="actions">
+								<li><a href="#one" class="button scrolly">Learn more</a></li>
+							</ul>
+						</div>
+					</section>
 
-	<h4>&bull; TERAPIA INTEGRATIVA &bull; </h4>
-	<p>
-		A terapia além de possuir espaço para a aliviar a angústia e a dor, também abre possibilidade para que a pessoa consiga promover transformações internas através das intervenções do terapeuta. Com duração de 50 minutos, a terapia tem como foco a melhora da saúde emocional e espiritual.
-	</p>
-	</section>
+				<!-- One -->
+					<section id="one" class="wrapper style2 spotlights">
+						<section>
+							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Sed ipsum dolor</h2>
+									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Feugiat consequat</h2>
+									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Ultricies aliquam</h2>
+									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+					</section>
 
-		</div>	
+				<!-- Two -->
+					<section id="two" class="wrapper style3 fade-up">
+						<div class="inner">
+							<h2>What we do</h2>
+							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<div class="features">
+								<section>
+									<span class="icon solid major fa-code"></span>
+									<h3>Lorem ipsum amet</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-lock"></span>
+									<h3>Aliquam sed nullam</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-cog"></span>
+									<h3>Sed erat ullam corper</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-desktop"></span>
+									<h3>Veroeros quis lorem</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-link"></span>
+									<h3>Urna quis bibendum</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<span class="icon major fa-gem"></span>
+									<h3>Aliquam urna dapibus</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+							</div>
+							<ul class="actions">
+								<li><a href="generic.html" class="button">Learn more</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Three -->
+					<section id="three" class="wrapper style1 fade-up">
+						<div class="inner">
+							<h2>Get in touch</h2>
+							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<div class="split style1">
+								<section>
+									<form method="post" action="#">
+										<div class="fields">
+											<div class="field half">
+												<label for="name">Name</label>
+												<input type="text" name="name" id="name" />
+											</div>
+											<div class="field half">
+												<label for="email">Email</label>
+												<input type="text" name="email" id="email" />
+											</div>
+											<div class="field">
+												<label for="message">Message</label>
+												<textarea name="message" id="message" rows="5"></textarea>
+											</div>
+										</div>
+										<ul class="actions">
+											<li><a href="" class="button submit">Send Message</a></li>
+										</ul>
+									</form>
+								</section>
+								<section>
+									<ul class="contact">
+										<li>
+											<h3>Address</h3>
+											<span>12345 Somewhere Road #654<br />
+											Nashville, TN 00000-0000<br />
+											USA</span>
+										</li>
+										<li>
+											<h3>Email</h3>
+											<a href="#">user@untitled.tld</a>
+										</li>
+										<li>
+											<h3>Phone</h3>
+											<span>(000) 000-0000</span>
+										</li>
+										<li>
+											<h3>Social</h3>
+											<ul class="icons">
+												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+											</ul>
+										</li>
+									</ul>
+								</section>
+							</div>
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Footer -->
+			<footer id="footer" class="wrapper style1-alt">
+				<div class="inner">
+					<ul class="menu">
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
