--- a/indexOld.html
+++ b/indexOld.html
@@ -3,6 +3,20 @@ layout: default
 ---
 <div id="wrapper">
 
+	<!-- Sidebar -->
+	<section id="sidebar">
+		<div class="inner">
+			<nav>
+				<ul>
+					<li><a href="#intro">Celebrante</a></li>
+					<li><a href="#one">Who we are</a></li>
+					<li><a href="#two">What we do</a></li>
+					<li><a href="#three">Get in touch</a></li>
+				</ul>
+			</nav>
+		</div>
+	</section>
+
 	<!-- One -->
 	<section id="one" class="wrapper style2 spotlights">
 		<section>
