--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@ layout: default
 		<div class="inner">
 			<h1>CELEBRANTE DIEGO SANTOS</h1>
 			<p>
-				💎 Celebrante<br />
-				Casamentos, Bodas e Aniversários<br />
-				🎤 Mestre de Cerimônia<br />
-				Formaturas, Eventos Sociais e Corporativos
+				Celebro o amor incondicional dos noivos e torno o grande dia da celebração deles ainda mais inesquecível e cheia de emoção!<br />
+				A cerimônia é um dos momentos mais importantes e emocionantes no casamento. Por isso, é preciso ter alegria, empatia, calma e sensibilidade. <br />
+				Nesse sentido, traduzo o amor que os noivos sentem um pelo outro através da construção de uma celebração personalizada, baseada no estilo, desejos, histórias, qualidades, valores e características do casal e da família. <br />
+				Palavras que brotam da inspiração divina tocam o interior das pessoas e as emocionam, pois falam de coração para coração. <br />
+				Todos os convidados sentem-se acolhidos e envolvidos na celebração uma vez que Deus se faz presente e se eterniza na felicidade dos noivos.
 			</p>
 			<ul class="actions">
 				<li><a href="#one" class="button scrolly">Saiba mais</a></li>
@@ -25,11 +26,8 @@ layout: default
 			<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 			<div class="content">
 				<div class="inner">
-					<h2>Sed ipsum dolor</h2>
-					<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-					<ul class="actions">
-						<li><a href="generic.html" class="button">Learn more</a></li>
-					</ul>
+					<h2>CERIMÔNIA</h2>
+					<p>A cerimônia será personalizada, elaborada de acordo com o desejo do casal, acrescida de simbolismos, tradições familiares, leituras e homenagens que criarão uma experiência profunda de oração e emocionante para os noivos e seus familiares e amigos.</p>
 				</div>
 			</div>
 		</section>
@@ -37,11 +35,8 @@ layout: default
 			<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 			<div class="content">
 				<div class="inner">
-					<h2>Feugiat consequat</h2>
-					<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-					<ul class="actions">
-						<li><a href="generic.html" class="button">Learn more</a></li>
-					</ul>
+					<h2>BRIEFING</h2>
+					<p>Para traduzir em palavras a história e a personalidade dos noivos, bem como os desejos deles para a celebração, me encontro pessoalmente com eles para alinharmos o roteiro da celebração. Cada detalhe é essencial para elaborar uma cerimônia que seja marcante e inesquecível.</p>
 				</div>
 			</div>
 		</section>
@@ -49,11 +44,8 @@ layout: default
 			<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 			<div class="content">
 				<div class="inner">
-					<h2>Ultricies aliquam</h2>
-					<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-					<ul class="actions">
-						<li><a href="generic.html" class="button">Learn more</a></li>
-					</ul>
+					<h2>RITUAL</h2>
+					<p>Com o trabalho de produção de conteúdo e de roteiro profissional, escrevo o rito e o discurso, trazendo o amor, a história, as lembranças e as crenças fortalecedoras que constituem a vida matrimonial. Através da espiritualidade, a cerimônia é o momento de expressar todas as emoções incríveis que os noivos escolheram viver e compartilhar um com o outro.</p>
 				</div>
 			</div>
 		</section>
@@ -62,43 +54,11 @@ layout: default
 	<!-- Two -->
 	<section id="two" class="wrapper style3 fade-up">
 		<div class="inner">
-			<h2>What we do</h2>
-			<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-			<div class="features">
-				<section>
-					<span class="icon solid major fa-code"></span>
-					<h3>Lorem ipsum amet</h3>
-					<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-				</section>
-				<section>
-					<span class="icon solid major fa-lock"></span>
-					<h3>Aliquam sed nullam</h3>
-					<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-				</section>
-				<section>
-					<span class="icon solid major fa-cog"></span>
-					<h3>Sed erat ullam corper</h3>
-					<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-				</section>
-				<section>
-					<span class="icon solid major fa-desktop"></span>
-					<h3>Veroeros quis lorem</h3>
-					<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-				</section>
-				<section>
-					<span class="icon solid major fa-link"></span>
-					<h3>Urna quis bibendum</h3>
-					<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-				</section>
-				<section>
-					<span class="icon major fa-gem"></span>
-					<h3>Aliquam urna dapibus</h3>
-					<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-				</section>
-			</div>
-			<ul class="actions">
-				<li><a href="generic.html" class="button">Learn more</a></li>
-			</ul>
+			<h2>O GRANDE DIA</h2>
+			<p>As lembranças do grande dia serão inesquecíveis, pois com o planejamento realizado, a celebração será como os noivos sempre sonharam. <br />
+				A minha missão é unir o casal no amor indissolúvel e aos mais puros sentimentos que possam trazer bênção, saúde, prosperidade e felicidade. <br />
+				Desse modo, celebro o casamento com todo o amor e a verdade do meu coração, eternizando as bênçãos de Deus na vida do casal! <br />
+				</p>
 		</div>
 	</section>
 
