--- a/index.html
+++ b/index.html
@@ -62,40 +62,6 @@ layout: default
 		</div>
 	</section>
 
-	<!-- Three -->
-	<section id="three" class="wrapper style1 fade-up">
-		<div class="inner">
-			<h2>Contato</h2>
-			<p>Agende agora uma conversa.</p>
-			<div class="split style1">				
-				<section>
-					<ul class="contact">
-						<li>
-							<h3>Endereço</h3>
-							<span>
-								Rua 7 de setembro, 666<br />
-								Centro<br />
-								Araras, SP
-							</span>
-						</li>
-						<li>
-							<h3>E-mail</h3>
-							<a href="#">terapiainspire@gmail.com</a>
-						</li>
-						<li>
-							<h3>Telefone</h3>
-							<span>(19) 97156-4256</span>
-						</li>
-						<li>
-							<h3>Social</h3>
-							<ul class="icons">
-								<li><a href="https://www.instagram.com/diegosantoscelebrante/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							</ul>
-						</li>
-					</ul>
-				</section>
-			</div>
-		</div>
-	</section>
+	{% include contact.html %}
 
 </div>
