--- a/404.html
+++ b/404.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>Terapia Inspire</title>
+    <title>Celebrante Diego Santos</title>
 
-    <meta http-equiv="refresh" content="1; URL='https://terapiainspire.com.br/'"/>
+    <meta http-equiv="refresh" content="1; URL='https://celebrantedsantos.com.br/'"/>
 </head>
 <body>
 ...
