--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 ---
 layout: default
 ---
-<div id="wrapper">
-
+<div id="wrapper"> 
 	<!-- Intro -->
 	<section id="intro" class="wrapper style1 fullscreen fade-up">
 		<div class="inner">
-			<h1>CELEBRANTE DIEGO SANTOS</h1>
-			<p>
-				Celebro o amor incondicional dos noivos e torno o grande dia da celebração deles ainda mais inesquecível e cheia de emoção!<br />
+			<h1>CELEBRANTE  Diego dos Santos </h1> 
+			<p> Celebro o amor incondicional dos noivos e torno o grande dia da celebração deles ainda mais inesquecível e cheia de emoção!<br />
 				A cerimônia é um dos momentos mais importantes e emocionantes no casamento. Por isso, é preciso ter alegria, empatia, calma e sensibilidade. <br />
 				Nesse sentido, traduzo o amor que os noivos sentem um pelo outro através da construção de uma celebração personalizada, baseada no estilo, desejos, histórias, qualidades, valores e características do casal e da família. <br />
 				Palavras que brotam da inspiração divina tocam o interior das pessoas e as emocionam, pois falam de coração para coração. <br />
