Revert "Update two.html"
This reverts commit 3a9059fac94b02f42d66581052fc83cd3fd2c121.

--- a/_index/two.html
+++ b/_index/two.html
@@ -5,7 +5,7 @@
     <div class="row">
         {% for casamento in casamentos %}
         <article class="col-6 col-12-xsmall work-item">
-            <a href="{{ casamento.imagem }}" class="image fit thumb"><img src="{{ casamento.imagem }}" alt="Casamento" /></a>
+            <a href="{{ casamento.imagem }}" class="image fit thumb"><img src="{{ casamento.imagem }}" alt="" /></a>
             <h3>{{ casamento.title }}</h3>
             <p>{{ casamento.subtitle }}</p>
         </article>
