--- a/_index/two.html
+++ b/_index/two.html
@@ -5,7 +5,12 @@
     <div class="row">
         {% for casamento in casamentos %}
         <article class="col-6 col-12-xsmall work-item">
+            {% if casamento.imagem  %}
             <a href="{{ casamento.imagem }}" class="image fit thumb"><img src="{{ casamento.imagem }}" alt="Casamento" /></a>
+            {% endif %}
+            {% if casamento.video  %}
+            <a href="{{ casamento.video }}" class="video fit thumb"><img src="{{ casamento.capa }}" alt="Casamento" /></a>
+            {% endif %}
             <h3>{{ casamento.title }}</h3>
             <p>{{ casamento.subtitle }}</p>
         </article>
