--- a/_index/one.html
+++ b/_index/one.html
@@ -8,7 +8,7 @@
     <header class="major">
         <h2>{{ empresa.title }}</h2>
     </header>
-    <p>{{ celebrante.detalhes }}</p>   
+    <p>{{ celebrante.detalhes | markdownify }}</p>   
 </section>
 <section >   
     <header class="major">
