--- a/_index/casamentos.html
+++ b/_index/casamentos.html
@@ -1,6 +1,6 @@
-<!-- Two -->
+<!-- casamentos -->
 {% assign casamentos = site.data.casamentos.casamentos %} 
-<section id="two">
+<section id="casamentos">
     <h2>Cerimônias Realidadas</h2>
     <div class="row">
         {% for casamento in casamentos %}
