--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 --- 
 <div id="main">
-	{% include_relative _index/one.html %}	
-	{% include_relative _index/two.html %}
+	{% include_relative _index/celebrante.html %}	
+	{% include_relative _index/casamentos.html %}
 	{% include  contact.html %}
 </div>
