--- a/_index/casamentos.html
+++ b/_index/casamentos.html
@@ -1,7 +1,9 @@
 <!-- casamentos -->
 {% assign casamentos = site.data.casamentos.casamentos %} 
+{% assign casamento = site.data.data.Casamentos %} 
 <section id="casamentos">
-    <h2>Cerimônias Realidadas</h2>
+    <h2><i class="fa-solid fa-place-of-worship"></i> {{ casamento.title }} </h2>
+    <p>{{ casamento.subtitle }}</p>
     <div class="row">
         {% for casamento in casamentos %}
         <article class="col-6 col-12-xsmall work-item">
